fixes horizontal scroll & setup

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,11 @@
 /*Navbar spacing*/
 @media (min-width: 981px) { body { padding-top: 56px; } }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 a { color: inherit; }
 
 .progress-bar {
